--- a/problems/homepage/dreams.html
+++ b/problems/homepage/dreams.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 
-<html lang='en'>
-    <head>
-        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css' integrity='sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2' crossorigin='anonymous'>
-        <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
-        <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx' crossorigin='anonymous'></script>
-        <link href='styles.css' rel='stylesheet'>
-        <title>JJ</title>
-    </head>
-    <body class='text-center dreams'>
-        <h6 class='h6'>I Have Had Dreams Of Being A Software Developer At Some Big Company, Such As FDAANG (Facebook, Discord, Amazon, Apple, Netflix, And Google)</h6>
-        <br/>
-        <hr/>
-        <footer><a href='index.html'>Start</a> <a href='about.html'>About</a> <a href='dreams.html'>Dreams</a> <a href='projects.html'>Projects</a></footer>
-    </body>
+<html lang="en">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles.css" rel="stylesheet" />
+    <title>JJ</title>
+  </head>
+  <body class="text-center dreams">
+    <h6 class="h6">
+      I Have Had Dreams Of Being A Software Developer At Some Big Company, Such
+      As FDAANG (Facebook, Discord, Amazon, Apple, Netflix, And Google)
+    </h6>
+    <br />
+    <hr />
+    <footer>
+      <a href="index.html">Start</a> <a href="about.html">About</a>
+      <a href="dreams.html">Dreams</a> <a href="projects.html">Projects</a>
+    </footer>
+  </body>
 </html>
